--- a/src/main/resources/static/User/signUp/signUp.html
+++ b/src/main/resources/static/User/signUp/signUp.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classic Wear | Sign Up</title>
+    <!-- Favicon links -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../resources/favicon_32x32.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="../resources/favicon_16x16.ico">
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="signup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -75,7 +79,7 @@
                     <label class="checkbox-container">
                         <input type="checkbox" name="terms" required>
                         <span class="checkmark"></span>
-                        I agree to the <a href="#">Terms & Conditions</a> and <a href="#">Privacy Policy</a>
+                        I agree to the <a href="#">&nbspTerms & Conditions</a>&nbspand&nbsp<a href="#">Privacy Policy</a>
                     </label>
                 </div>
                 
