--- a/src/main/resources/static/User/signUp/signUp.html
+++ b/src/main/resources/static/User/signUp/signUp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classic Wear | Sign Up</title>
+    <title>Classic Wear | Sign Up | User</title>
     <!-- Favicon links -->
     <link rel="icon" type="image/png" sizes="32x32" href="../resources/favicon_32x32.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="../resources/favicon_16x16.ico">
