--- a/src/main/resources/static/Admin/login/login.html
+++ b/src/main/resources/static/Admin/login/login.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../resources/favicon_32x32.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="../resources/favicon_16x16.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classic Wear | Login</title>
+    <title>Classic Wear | Login | Admin</title>
     <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -45,9 +45,6 @@
                 </div>
                 
                 <button type="submit" class="btn-login">Login</button>
-
-                
-                <p class="signup-link">Don't have an account? <a href="../SignUp/signup.html">Sign up</a></p>
             </form>
         </div>
     </div>
