Updated Signin page

--- a/src/main/resources/static/User/login/login.html
+++ b/src/main/resources/static/User/login/login.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="logo-container">
-            <img src="../Resources/logo.png" alt="Classic Wear Logo" class="logo">
+            <img src="../resources/Logo.png" alt="Classic Wear Logo" class="logo">
             <div class="welcome-text">
                 <p>Experience timeless elegance with Classic Wear</p>
             </div>
