--- a/src/main/resources/static/User/dashboard/dashboard.html
+++ b/src/main/resources/static/User/dashboard/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,48 @@
     <link rel="icon" type="image/x-icon" href="../resources/favicon_32x32.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body class="light-theme">
+    <!-- Product Detail Popup -->
+    <div id="productDetailPopup" class="product-popup">
+        <div class="popup-overlay"></div>
+        <div class="popup-content">
+            <button class="close-popup">&times;</button>
+            <div class="popup-main">
+                <div class="popup-gallery">
+                    <div class="main-image">
+                        <img id="popupMainImage" src="" alt="">
+                    </div>
+                    <div class="thumbnails" id="popupThumbnails"></div>
+                </div>
+                <div class="popup-details">
+                    <h2 id="popupProductName"></h2>
+                    <div class="price-rating">
+                        <div class="popup-price" id="popupPrice"></div>
+                        <div class="popup-rating" id="popupRating"></div>
+                    </div>
+                    <div class="popup-description">
+                        <h3>Description</h3>
+                        <p id="popupDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="popup-quantity">
+                        <h3>Quantity</h3>
+                        <div class="quantity-selector">
+                            <button class="quantity-minus">-</button>
+                            <input type="number" value="1" min="1" class="quantity-input">
+                            <button class="quantity-plus">+</button>
+                        </div>
+                    </div>
+                    <button class="add-to-cart-btn"><i class="fas fa-cart-plus" style="margin-right: 15px; color: #000;"></i>Add to Cart</button>
+                    <div class="popup-reviews">
+                        <h3>Reviews</h3>
+                        <div class="reviews-container" id="popupReviews"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo-container">
@@ -17,7 +59,8 @@
             <ul class="nav-links">
                 <li><a href="../main/main.html"><i class="fas fa-store"></i> Shop</a></li>
                 <li class="cart-item">
-                    <a href="../cart/cart.html"><i class="fas fa-shopping-cart"></i> Cart <span class="cart-count">0</span></a>
+                    <a href="../cart/cart.html"><i class="fas fa-shopping-cart"></i> Cart <span
+                            class="cart-count">0</span></a>
                 </li>
                 <li><a href="#footer"><i class="fas fa-envelope"></i> Contact</a></li>
                 <li>
@@ -56,7 +99,7 @@
                     <h2><i class="fas fa-clipboard-list"></i> My Orders</h2>
                     <div class="order-tabs">
                         <button class="tab-btn active" data-tab="past">Past</button>
-                        <button class="tab-btn" data-tab="in-progress">In Progress</button>
+                        <button class="tab-btn" data-tab="inProgress">In Progress</button>
                         <button class="tab-btn" data-tab="cancelled">Cancelled</button>
                     </div>
                 </div>
@@ -105,4 +148,5 @@
 
     <script src="dashboard.js"></script>
 </body>
+
 </html>
