--- a/src/main/resources/static/User/main/main.html
+++ b/src/main/resources/static/User/main/main.html
@@ -60,9 +60,9 @@
             <ul class="nav-links">
                 <li><a href="../dashboard/dashboard.html"><i class="fas fa-user"></i> Profile</a></li>
                 <li class="cart-item">
-                    <a href="#"><i class="fas fa-shopping-cart"></i> Cart <span class="cart-count">0</span></a>
+                    <a href="../cart/cart.html"><i class="fas fa-shopping-cart"></i> Cart <span class="cart-count">0</span></a>
                 </li>
-                <li><a href="#footer"><i class="fas fa-envelope"></i> Contact</a></li>
+                <li><a href="#my-footer"><i class="fas fa-envelope"></i> Contact</a></li>
                 <li>
                     <button class="theme-toggle" aria-label="Toggle theme">
                         <i class="fas fa-moon"></i>
@@ -97,13 +97,13 @@
         </section>
     </main>
 
-    <footer id="footer" class="footer">
-        <div class="footer-container">
-            <div class="footer-logo">
+    <footer id="my-footer" class="my-footer">
+        <div class="my-footer-container">
+            <div class="my-footer-logo">
                 <img src="../resources/logo-dark.png" alt="Regalith Logo">
                 <p>Elegance, Carved in Time</p>
             </div>
-            <div class="footer-links">
+            <div class="my-footer-links">
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="#">About Us</a></li>
@@ -112,14 +112,14 @@
                     <li><a href="#">Careers</a></li>
                 </ul>
             </div>
-            <div class="footer-contact">
+            <div class="my-footer-contact">
                 <h3>Contact Us</h3>
                 <p><i class="fas fa-map-marker-alt"></i> 123 Elegance Ave, Design District</p>
                 <p><i class="fas fa-phone"></i> (123) 456-7890</p>
                 <p><i class="fas fa-envelope"></i> info@regalith.com</p>
             </div>
         </div>
-        <div class="footer-bottom">
+        <div class="my-footer-bottom">
             <p>&copy; 2023 Regalith. All rights reserved.</p>
         </div>
     </footer>
