Updated Mock up Data

--- a/src/main/resources/static/User/dashboard/dashboard.html
+++ b/src/main/resources/static/User/dashboard/dashboard.html
@@ -98,7 +98,7 @@
                     <h2><i class="fas fa-clipboard-list"></i> My Orders</h2>
                     <div class="order-tabs">
                         <button class="tab-btn active" data-tab="past">Past</button>
-                        <button class="tab-btn" data-tab="inProgress">In Progress</button>
+                        <button class="tab-btn" data-tab="processing">In Progress</button>
                         <button class="tab-btn" data-tab="cancelled">Cancelled</button>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
     <footer id="my-footer" class="my-footer">
         <div class="my-footer-container">
             <div class="my-footer-logo">
-                <img src="../resources/logo-dark.png" alt="Regalith Logo">
+                <img src="../resources/logo-light.png" alt="Regalith Logo" class="logo-my-footer">
                 <p>Elegance, Carved in Time</p>
             </div>
             <div class="my-footer-links">
