--- a/src/main/resources/static/User/login/login.html
+++ b/src/main/resources/static/User/login/login.html
@@ -85,7 +85,7 @@
     <footer id="my-footer" class="my-footer">
         <div class="my-footer-container">
             <div class="my-footer-logo">
-                <img src="../resources/logo-dark.png" alt="Regalith Logo" class="logo-my-footer">
+                <img src="../resources/logo-light.png" alt="Regalith Logo" class="logo-my-footer">
                 <p>Elegance, Carved in Time</p>
             </div>
             <div class="my-footer-links">
