--- a/src/main/resources/static/User/products/products.html
+++ b/src/main/resources/static/User/products/products.html
@@ -24,7 +24,12 @@
                     <div class="thumbnails" id="popupThumbnails"></div>
                 </div>
                 <div class="popup-details">
-                    <h2 id="popupProductName"></h2>
+                    <div class="product-header">
+                        <h2 id="popupProductName"></h2>
+                        <button class="wishlist-btn" id="popupWishlistBtn">
+                            <i class="far fa-heart"></i>
+                        </button>
+                    </div>
                     <div class="price-rating">
                         <div class="popup-price" id="popupPrice"></div>
                         <div class="popup-rating" id="popupRating"></div>
@@ -42,7 +47,8 @@
                             <button class="quantity-plus">+</button>
                         </div>
                     </div>
-                    <button class="add-to-cart-btn"><i class="fas fa-cart-plus" style="margin-right: 15px; color: #000;"></i>Add to Cart</button>
+                    <button class="add-to-cart-btn"><i class="fas fa-cart-plus"
+                            style="margin-right: 15px; color: #000;"></i>Add to Cart</button>
                     <div class="popup-reviews">
                         <h3>Reviews</h3>
                         <div class="reviews-container" id="popupReviews"></div>
@@ -51,7 +57,7 @@
             </div>
         </div>
     </div>
-    
+
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo-container">
@@ -71,7 +77,8 @@
 
                 <li><a href="#my-footer"><i class="fas fa-envelope"></i> Contact</a></li>
                 <li class="cart-item">
-                    <a href="../cart/cart.html"><i class="fas fa-shopping-cart"></i> Cart <span class="cart-count">0</span></a>
+                    <a href="../cart/cart.html"><i class="fas fa-shopping-cart"></i> Cart <span
+                            class="cart-count">0</span></a>
                 </li>
                 <li><a href="../dashboard/dashboard.html"><i class="fas fa-user"></i> Profile</a></li>
                 <li>
@@ -148,7 +155,7 @@
     <footer id="my-footer" class="my-footer">
         <div class="my-footer-container">
             <div class="my-footer-logo">
-                <img src="../resources/logo-dark.png" alt="Regalith Logo">
+                <img src="../resources/logo-light.png" alt="Regalith Logo" class="logo-my-footer">
                 <p>Elegance, Carved in Time</p>
             </div>
             <div class="my-footer-links">
